--- a/blog.html
+++ b/blog.html
@@ -39,6 +39,7 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
  aspernatur, vel atque dolor iusto inventore deserunt saepe. Odit, 
 maxime aperiam inventore porro explicabo numquam impedit laborum, eligendi quasi pariatur libero.
  </p>
+ <a href="https://www.nairobicitymarathon.com/">links</a>
     </div>
 </body>
 </html>
